IPG compliant ec_resp: make the slogan appear on small devices and fix the header background

--- a/profiles/common/themes/ec_resp/css/ec_resp.css
+++ b/profiles/common/themes/ec_resp/css/ec_resp.css
@@ -7360,7 +7360,7 @@ tr.odd {
   height: 145px;
   width: 100%;
   background-repeat: repeat-x;
-  background-position: left bottom;
+  background-position: 0 0;
   background-image: url("../images/title/title.gif");
   position: relative;
   z-index: 10;
@@ -7409,7 +7409,7 @@ tr.odd {
 @media (max-width: 767px) {
   #layout-header {
     height: auto;
-    min-height: 82px;
+    min-height: 90px;
   }
   #layout-header #banner-flag {
     width: 90px;
@@ -7418,18 +7418,18 @@ tr.odd {
     top: 10px;
   }
   #layout-header #main-title {
-    font-size: 26px !important;
+    font-size: 22px !important;
     position: relative;
     left: 0;
     top: 0;
-    padding: 28px 0 0 100px;
+    padding: 24px 0 0 100px;
     text-transform: none;
   }
-}
-@media (max-width: 479px) {
-  #layout-header #main-title {
-    margin-top: 4px;
-    font-size: 20px !important;
+  #layout-header #sub-title {
+    color: #074A8B;
+    padding-left: 100px;
+    position: static;
+    font-size: 16px !important;
   }
 }
 /* ------------------ Region header right ------------------ */
@@ -7567,12 +7567,12 @@ tr.odd {
   box-shadow: none;
 }
 .lang-select-site .panel-body {
-  padding: 0px;
+  padding: 0;
 }
 .lang-select-site .panel-body .lang-select-site__link {
   display: block;
-  margin: -15px;
-  padding: 15px;
+  margin-top: -30px;
+  padding: 0;
 }
 .lang-select-site .panel-body .lang-select-site__code {
   display: inline;
@@ -7611,7 +7611,7 @@ a.lang-select-site .panel-body .lang-select-site__code:focus {
 /* ------------------ Hack when js is enabled ------------------ */
 .js #services,
 .js #block-menu-menu-service-tools .menu {
-  padding-right: 155px;
+  right: 155px;
 }
 .js .language-selector {
   display: none;
@@ -9194,7 +9194,8 @@ ul.quicktabs-tabs.quicktabs-style-nostyle a:visited {
   padding: 2px 4px;
 }
 /* ---------------- Splash screen  ----------------- */
-body.page-splash {
+body.page-splash,
+body.page-language-selector-site-language {
   min-height: 100%;
   background-image: -webkit-linear-gradient(top, #369 0%, #69C 100%);
   background-image: -o-linear-gradient(top, #369 0%, #69C 100%);
@@ -9204,11 +9205,16 @@ body.page-splash {
   background-repeat: no-repeat;
   background-color: #69C;
 }
-body.page-splash #splash-block {
+body.page-splash #splash-block,
+body.page-language-selector-site-language #splash-block,
+body.page-splash #language-selector-site-language-list-page,
+body.page-language-selector-site-language #language-selector-site-language-list-page {
   margin: 50px 20px 20px;
 }
 body.page-splash h2,
-body.page-splash h3 {
+body.page-language-selector-site-language h2,
+body.page-splash h3,
+body.page-language-selector-site-language h3 {
   text-align: center;
 }
 #logo {
